# wolf

./: .gitignore  README.md  rebuild_loop.sh  test.sqlite
site/: config.json
site/assets/: app.css  app.js
site/content/: index.json  menu.1.json
site/templates/: dash.html  index.html  test.html
src/: CMakeLists.txt  crud.hpp  database.hpp  main.cpp  model.cpp  model.hpp  server.cpp  server.hpp  utils.cpp  utils.hpp
src/framework/: crud.cpp  crud.hpp  database.cpp  database.hpp  html.cpp  html.hpp  server.cpp  server.hpp  template.cpp  template.hpp  utils.cpp  utils.hpp
